--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
 
-    <title>Home | Macaw Business</title>
+    <title>Lab | Macaw Business</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/img/logo.ico"/>
 
@@ -44,14 +44,15 @@
     <script src="/lb/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="get-to-know-us">
-        <div class="gtku-bloco">
-            <div class="gtku-foto" style="background-image: url(../img/rodrigo.jpg); background-position: -6vw -0vh;">
-            </div>
-            <div class="gtku-conteudo">
-                <h1 class="calibri-bold">Rodrigo Alberto Báez Avila</h1>
-                <h2 class="calibri-italic">Co-Founder & CEO</h2>
-                <p class="calibri-regular">Corporate & Tax Attorney who started in a boutique firm and have worked in highly complex operations. He is a specialist in Corporate Law from Fundação Getúlio Vargas and Tax Law and Applied Accounting from Católica de Santa Catarina. Having lived in 5 different countries, Rodrigo has a very strong communication skillset to be able to assure clarity of cultural business risk.</p>
+    <section>
+        <img class="gtku-logo" src="/img/logo.svg" alt="">
+        <div id="gtku-rodrigo" class="gtku-bloco">
+            <img id="rodrigo-focus" class="gtku-rodrigo-focus" src="/img/rodrigo-focus.png" alt="">
+            <img id="rodrigo-foto" class="gtku-rodrigo-img" src="/img/rodrigo.png" alt="">
+            <div class="gtku-conteudo" style="left: 5.5vw;">
+                <h1 id="gtku-rodrigo-h1"  class="calibri-bold">Rodrigo Alberto Báez Avila</h1>
+                <h2 id="gtku-rodrigo-h2" class="calibri-italic">Co-Founder & CEO</h2>
+                <p id="gtku-rodrigo-p" class="calibri-regular">Corporate & Tax Attorney who started in a boutique firm and have worked in highly complex operations. He is a specialist in Corporate Law from Fundação Getúlio Vargas and Tax Law and Applied Accounting from Católica de Santa Catarina. Having lived in 5 different countries, Rodrigo has a very strong communication skillset to be able to assure clarity of cultural business risk.</p>
                 <div class="gtku-contact">
                     <div class="gtku-linkedin">
                         <i class="fab fa-linkedin-in"></i>
@@ -67,12 +68,13 @@
                 </div>
             </div>
         </div>
-        <div class="gtku-bloco" style="height: 86.5vh;">
-            <div class="gtku-foto" style="background-image: url(../img/nicolas.jpg); background-position: 0vw -10vh;"></div>
-            <div class="gtku-conteudo">
-                <h1 class="calibri-bold">Nicolas Macedo de Richter </h1>
-                <h2 class="calibri-italic">Co-Founder & Partner</h2>
-                <p class="calibri-regular">Lawyer with a background in corporate law, mainly in judicial recovery and business restructuring. Has a MBA in corporate finance by the Federal Technological University of Paraná. Today operates inside the world of credit funds and asset management.</p>
+        <div id="gtku-nicolas" class="gtku-bloco">
+            <img id="nicolas-focus" class="gtku-nicolas-focus" src="/img/nicolas-focus.png" alt="">
+            <img id="nicolas-foto" class="gtku-nicolas-img" src="/img/nicolas.png" alt="">
+            <div class="gtku-conteudo" style="right: 5.5vw;">
+                <h1 id="gtku-nicolas-h1" class="calibri-bold">Nicolas Macedo de Richter </h1>
+                <h2 id="gtku-nicolas-h2" class="calibri-italic">Co-Founder & Partner</h2>
+                <p id="gtku-nicolas-p" class="calibri-regular">Lawyer with a background in corporate law, mainly in judicial recovery and business restructuring. Has a MBA in corporate finance by the Federal Technological University of Paraná. Today operates inside the world of credit funds and asset management.</p>
                 <div class="gtku-contact">
                     <div class="gtku-linkedin">
                         <i class="fab fa-linkedin-in"></i>
@@ -88,6 +90,54 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <script>
+        const rodrigo = document.getElementById("gtku-rodrigo")
+        const rodrigoH1 = document.getElementById("gtku-rodrigo-h1")
+        const rodrigoH2 = document.getElementById("gtku-rodrigo-h2")
+        const rodrigoP = document.getElementById("gtku-rodrigo-p")
+        
+
+        const nicolas = document.getElementById("gtku-nicolas")
+        const nicolasH1 = document.getElementById("gtku-nicolas-h1")
+        const nicolasH2 = document.getElementById("gtku-nicolas-h2")
+        const nicolasP = document.getElementById("gtku-nicolas-p")
+
+        const rodrigoFocus = document.getElementById("rodrigo-focus")
+        const nicolasFocus = document.getElementById("nicolas-focus")
+
+        rodrigo.addEventListener("mouseover", rodrigoFocusIn);
+        nicolas.addEventListener("mouseover", nicolasFocusIn);
+
+        rodrigo.addEventListener("mouseout", rodrigoFocusOut);
+        nicolas.addEventListener("mouseout", nicolasFocusOut);
+
+        function rodrigoFocusIn() {
+            rodrigoFocus.style.opacity = '1'
+            rodrigoH1.style.color = '#003dd9'
+            rodrigoH2.style.color = '#195BFF'
+            rodrigoP.style.color = '#020926'
+        }
+
+        function nicolasFocusIn() {
+            nicolasFocus.style.opacity = '1'
+            nicolasH1.style.color = '#003dd9'
+            nicolasH2.style.color = '#195BFF'
+            nicolasP.style.color = '#020926'
+        }
+
+        function rodrigoFocusOut() {
+            rodrigoFocus.style.opacity = '0'
+            rodrigoH1.style.color = '#737373'
+            rodrigoH2.style.color = '#737373'
+            rodrigoP.style.color = '#737373'
+        }
+
+        function nicolasFocusOut() {
+            nicolasFocus.style.opacity = '0'
+            nicolasH1.style.color = '#737373'
+            nicolasH2.style.color = '#737373'
+            nicolasP.style.color = '#737373'
+        }
+    </script>
 </body>
-</html>
