--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
         </div>
         <div id="gtku-nicolas" class="gtku-bloco">
-            <img id="nicolas-focus" class="gtku-nicolas-focus" src="/img/nicolas-focus.png" alt="">
-            <img id="nicolas-foto" class="gtku-nicolas-img" src="/img/nicolas.png" alt="">
+            <img id="nicolas-focus" class="gtku-nicolas-focus" src="img/nicolas-focus.png" alt="">
+            <img id="nicolas-foto" class="gtku-nicolas-img" src="img/nicolas.png" alt="">
             <div class="gtku-conteudo" style="right: 5.5vw;">
                 <h1 id="gtku-nicolas-h1" class="calibri-bold">Nicolas Macedo de Richter </h1>
                 <h2 id="gtku-nicolas-h2" class="calibri-italic">Co-Founder & Partner</h2>
