--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Lab | Macaw Business</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico"/>
+    <link rel="icon" type="image/x-icon" href="/img/logo.svg"/>
 
     <!-- Fonts -->
 
@@ -45,10 +45,10 @@
 </head>
 <body>
     <section>
-        <img class="gtku-logo" src="/img/logo.svg" alt="">
+        <img class="gtku-logo" src="img/logo.svg" alt="">
         <div id="gtku-rodrigo" class="gtku-bloco">
-            <img id="rodrigo-focus" class="gtku-rodrigo-focus" src="/img/rodrigo-focus.png" alt="">
-            <img id="rodrigo-foto" class="gtku-rodrigo-img" src="/img/rodrigo.png" alt="">
+            <img id="rodrigo-focus" class="gtku-rodrigo-focus" src="img/rodrigo-focus.png" alt="">
+            <img id="rodrigo-foto" class="gtku-rodrigo-img" src="img/rodrigo.png" alt="">
             <div class="gtku-conteudo" style="left: 5.5vw;">
                 <h1 id="gtku-rodrigo-h1"  class="calibri-bold">Rodrigo Alberto Báez Avila</h1>
                 <h2 id="gtku-rodrigo-h2" class="calibri-italic">Co-Founder & CEO</h2>
@@ -69,8 +69,8 @@
             </div>
         </div>
         <div id="gtku-nicolas" class="gtku-bloco">
-            <img id="nicolas-focus" class="gtku-nicolas-focus" src="/img/nicolas-focus.png" alt="">
-            <img id="nicolas-foto" class="gtku-nicolas-img" src="/img/nicolas.png" alt="">
+            <img id="nicolas-focus" class="gtku-nicolas-focus" src="img/nicolas-focus.png" alt="">
+            <img id="nicolas-foto" class="gtku-nicolas-img" src="img/nicolas.png" alt="">
             <div class="gtku-conteudo" style="right: 5.5vw;">
                 <h1 id="gtku-nicolas-h1" class="calibri-bold">Nicolas Macedo de Richter </h1>
                 <h2 id="gtku-nicolas-h2" class="calibri-italic">Co-Founder & Partner</h2>
