--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Lab | Macaw Business</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.svg"/>
+    <link rel="icon" type="image/x-icon" href="img/logo.svg"/>
 
     <!-- Fonts -->
 
